# puzzleleague64

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  asdf.py  asdf.txt  decomp.yaml  diff_settings.py  fdas.py  probe-8ecd74f300314302bf5e0c86b06aad47.txt  puzzleleague.eur.md5  puzzleleague.eur.yaml  puzzleleague.fra.md5  puzzleleague.fra.yaml  puzzleleague.ger.md5  puzzleleague.ger.yaml  puzzleleague.usa.md5  puzzleleague.usa.yaml  puzzleleague64.eur.md5  puzzleleague64.eur.yaml  puzzleleague64.fra.md5  puzzleleague64.fra.yaml  puzzleleague64.ger.md5  puzzleleague64.ger.yaml  puzzleleague64.usa.md5  puzzleleague64.usa.yaml  pyproject.toml  requirements.txt  slinky.eur.yaml  slinky.fra.yaml  slinky.ger.yaml  slinky.usa.yaml  slinky.yaml
config/: slinky.yaml
docs/: index.html
include/: 001F10.h  0025C0.h  02E800.h  041780.h  043000.h  043D10.h  044E80.h  067FB0.h  0707D0.h  071B50.h  074280.h  075630.h  action.h  ai.h  alignment.h  animate.h  animate2d.h  animate3d.h  animation.h  assets_variables.h  attack.h  attack2d.h  attack3d.h  bg_screen_load.h  bitmap.h  bkground.h  block.h  bonus.h  boot_main.h  buffers.h  build.h  cfb_keep.h  character.h  combo.h  combo2d.h  combo3d.h  controller.h  cursor.h  dlist.h  dma_rom_copy.h  (+59 more)
lib/: Makefile
linker_scripts/: common_undef_syms.ld  hardware_regs.ld
relocs/: reloc_addrs.eur.txt  reloc_addrs.fra.txt  reloc_addrs.ger.txt  reloc_addrs.usa.txt
tools/: .gitignore  Makefile  binfile_list.txt  check_reordering.py  m2ctx.py  (+12 more)
tools/rstools/: .gitignore  Cargo.toml
tools/rstools/src/: lib.rs  main.rs  utils.rs
(+353 files in other folders)
